[tool.poetry]
name = "esiosexplore"
version = "0.1.0"
description = "Explore Spanish electricity market"
authors = ["Manu Valdés <manuvaldes@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9.6"
pandas = "^1.3.1"
numpy = "^1.21.1"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
ipython = "^7.25.0"
jupyterlab = "^3.1.1"
markdownify = "^0.9.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
